fix slight styling gap

--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -106,11 +106,11 @@ li
     display flex
     align-content stretch
     align-items baseline
-    margin -6px -20px 0 0
+    margin -8px -20px 0 0
     
     &.mac
       order 1
-      margin -6px 10px 0 -20px
+      margin -8px 10px 0 -20px
       
       a:first-child
         order 3
